[project]
name = "chatterbox-tts"
version = "0.1.2"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy==2.2.3",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "transformers==4.54",
    "diffusers==0.35.1",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3"
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
